Remove CLAUDE.md from repository tracking
- Added CLAUDE.md to .gitignore for local development only
- Removed from git tracking while preserving local file
- This keeps AI assistant guidance available locally without
  cluttering the public repository

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ Thumbs.db
 
 # Datasets (should be obtained separately)
 datasets/
+
+# Claude AI assistant guidance (local development only)
+CLAUDE.md
